<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_event">Add Event</string>
    <string name="app_name">Block IDLE</string>
    <string name="block_idle">Block IDLE</string>
    <string name="cancel">Cancel</string>
    <string name="code_viewer">Code Viewer</string>
    <string name="class_name">Class Name</string>
    <string name="class_name_example">Example \: MyClass</string>
    <string name="create">Create</string>
    <string name="creates_a_new_folder_in_the_selected_folder">Creates a new folder in the selected folder</string>
    <string name="create_a_new_project">Create a new project</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="event_imports">Event imports</string>
    <string name="file_tree">File Tree</string>
    <string name="folder_name">Folder Name</string>
    <string name="install_tools">Install Tools</string>
    <string name="instance_variables">Instance Variables</string>
    <string name="new_folder">New Folder</string>
    <string name="new_folder_name">New Folder Name</string>
    <string name="new_java_class">New Java Class</string>
    <string name="no_projects_yet">No projects yet</string>
    <string name="no_pane_yet">No pane yet</string>
    <string name="open_from_drawer">Open from drawer</string>
    <string name="package_name">Package Name</string>
    <string name="package_name_example">Example \: com.example.pkg</string>
    <string name="project_configuration">Project Configuration</string>
    <string name="project_name">Project Name</string>
    <string name="project_name_example">Example \: MyProject</string>
    <string name="static_variables">Static Variables</string>
    <string name="select_your_datatype">Select your datatype</string>
    <string name="team_empty_message">No team members available.</string>
    <string name="title_team">Team</string>
    <string name="variable_configuration">Variable Configuration</string>
    <string name="variable_name">Variable Name</string>
    <string name="variable_name_example">Example \: myVariable</string>
    <string name="version_name">Version Name</string>
    <string name="team_view_github">View GitHub</string>
    <string name="tooling_server_not_started_error">Tooling server not started, could not open project</string>
    <string name="more_options">More Options</string>
</resources>
